--- a/server/templates/experiment.html
+++ b/server/templates/experiment.html
@@ -22,7 +22,7 @@
         <li><a href="#tab9">Glycerol Stock</a></li>
     </ul>
     <div class="content" id="tab1">
-        <p><img class="image" src="..\static\images\protocol\1.png" align="right">
+        <p><img class="image" src="../static/images/protocol/1.png" align="right">
         &nbsp;&nbsp;When obtaining plasmid DNA for digestion and ligation, a yield of at least 15 ng/μL is desirable. 
         Also, it is helpful to miniprep more than one sample of each type of plasmid DNA every time the miniprep 
         procedure is done. Due to the overnight incubation step, minipreps are a bottleneck process, so minimize the 
@@ -35,7 +35,7 @@
         or at least 400 ng. If digesting to make a vector or an insert, the amount of DNA to digest depends 
         how much DNA you need for your ligation.<br /><br /></p>
         <div class="imageContent" align="center">
-            <img class="image" src="..\static\images\protocol\2.png">
+            <img class="image" src="../static/images/protocol/2.png">
         </div>
         <p><b>2.2</b> Mix the DNA with 2 μL of the appropriate buffer (see Table 1) in a 500-μL microfuge tube. Add 1 
         μL of each enzyme (total enzyme volume cannot exceed 10% of reaction volume). Increase the volume 
@@ -87,7 +87,7 @@
     <div class="content" id="tab3"><br />
         <p><strong>&nbsp;&nbsp;Run the digested DNA on a gel until there is adequate separation between the desired piece of DNA and the DNA that it was cut from.</strong></p>
         <div class="imageContent" align="center">
-            <img class="image" src="..\static\images\protocol\3.png">
+            <img class="image" src="../static/images/protocol/3.png">
         </div>
         <p><b>3.1</b> Prepare a gel of appropriate agarose concentration(use the web tool 
         at<a href="http://gcat.davidson.edu/iGEM08/gelwebsite/gelwebsite.html" target=blank>
@@ -99,7 +99,7 @@
         <p><strong>&nbsp;&nbsp;Place the gel under UV light at an intensity just high enough to visualize the bands. Cut out the bands containing the insert and the vector with a razor and purify the DNA.</strong></p>
         <p><b>4.1</b> Place the gel under UV light at an intensity just high enough to visualize the bands. 
         Cut out the bands containing the insert and the vector to purify the DNA.<br /><br /></p>
-        <p><b>4.2<img class="image" src="..\static\images\protocol\4.png" align="right"></b> Place the gel slice in a 1.5-mL microfuge tube and weigh it. Add two volumes of Buffer
+        <p><b>4.2<img class="image" src="../static/images/protocol/4.png" align="right"></b> Place the gel slice in a 1.5-mL microfuge tube and weigh it. Add two volumes of Buffer
         NT to one volume of gel (100 mg  =  200 μL). For gels >2% agarose, double the volume 
         of Buffer NT.<br /><br /></p>
         <p><b>4.3</b> Incubate the gel at 50°C for 5–10 min until the gel slice is completely dissolved. 
@@ -124,7 +124,7 @@
         a 500-μL microfuge tube. The amount of insert to add is calculated from the following 
         formula:<br /><br /></p>
         <p align="center">&nbsp;&nbsp;ng of insert=(2)(bp\ insert)(50ng linearized plasmid)/ (size of plasmid in bp).<br /><br /></p> 
-        <p><img class="image" src="..\static\images\protocol\5.png" align="right">&nbsp;&nbsp;Add water to increase the final volume to 10 μL.<br /><br /></p>
+        <p><img class="image" src="../static/images/protocol/5.png" align="right">&nbsp;&nbsp;Add water to increase the final volume to 10 μL.<br /><br /></p>
         <p><b>5.2</b> Prepare both a positive ligation mixture that contains the digested vector and insert 
         as well as a negative ligation mixture that contains only the digested vector. Add more 
         water to the negative ligation mixture to prepare equal volumes.<br /><br /></p>
@@ -136,7 +136,7 @@
         <p><strong>&nbsp;&nbsp;Use the ligation mixture to transform into competent E. coli cells.</strong></p>
         <p><b>6.1</b> Prewarm culture plates to increase the drying rate of plated cells. The culture plates 
         should contain the appropriate antibiotic for the transforming plasmid.<br /><br /></p>
-        <p><img class="image" src="..\static\images\protocol\6.png" align="right"><b>6.2</b> Store Z-Competent™ cells at −70°C or colder. Thaw a 100-μL tube of Z-Competent™ 
+        <p><img class="image" src="../static/images/protocol/6.png" align="right"><b>6.2</b> Store Z-Competent™ cells at −70°C or colder. Thaw a 100-μL tube of Z-Competent™ 
         cells for 5 min on ice. At the same time, cool the tubes containing the ligation mixtures 
         on ice.<br /><br /></p>
         <p><b>6.3</b> Very gently add 25–50 μL of Z-Competent™ cells to each ligation mixture of 10 μL.<br /><br /></p>
@@ -157,7 +157,7 @@
         background negative colonies. Plan to screen an appropriate amount so that it is highly probable 
         at least one of the positive colonies will have the correct insert size given the amount of background 
         negative colonies. Screen at least one negative colony also.<br /><br /></p>
-        <p><img class="image" src="..\static\images\protocol\7.png" align="right"><b>7.2</b> To conduct PCR, you will need a forward and reverse primer specific to the plasmid being screened. 
+        <p><img class="image" src="../static/images/protocol/7.png" align="right"><b>7.2</b> To conduct PCR, you will need a forward and reverse primer specific to the plasmid being screened. 
         The primers should amplify the region where the insert was added.<br /><br /></p>
         <p><b>7.3</b> For each colony to be picked, prepare a PCR tube with the following mixture: 
         12 μL 2× Green Master Mix, 10 μL dH2O, 1 μL (20 pmol) forward primer, 1 μL (20 pmol) 
@@ -185,7 +185,7 @@
         <p><b>8.2</b> Miniprep the overnight cultures to obtain plasmid DNA. Digest the plasmid DNA with EcoRI and PstI as a conclusive test for whether the ligation was successful.</p>
         <p><strong>&nbsp;&nbsp;The product from step 8 may be used for further assembly and processing.</strong></p>
         <div class="imageContent" align="center">
-            <img class="image" src="..\static\images\protocol\8.png">
+            <img class="image" src="../static/images/protocol/8.png">
         </div>
     </div>
     <div class="content" id="tab9"><br />
@@ -193,7 +193,7 @@
         <p><b>9.1</b> Grow a 2-mL culture of a particular cell type overnight for each frozen stock that is needed.<br /><br /></p>
         <p><b>9.2</b> Microwave sterile glycerol for 30s. Do not mix the glycerol so that the top portion 
         remains as hot as possible.<br /><br /></p>
-        <p><img class="image" src="..\static\images\protocol\9.png" align="right"><b>9.3</b> Cut a 200-μL pipette tip with a clean razor blade to make a larger opening at the tip.<br /><br /></p>
+        <p><img class="image" src="../static/images/protocol/9.png" align="right"><b>9.3</b> Cut a 200-μL pipette tip with a clean razor blade to make a larger opening at the tip.<br /><br /></p>
         <p><b>9.4</b> Label Nunc cryotubes as appropriate and add 150 μL of hot glycerol.<br /><br /></p>
         <p><b>9.5</b> Allow the glycerol in the tubes to cool at room temperature for 1 min.
         Add 850 μL of bacterial culture to each tube, making 15% glycerol mixtures.<br /><br /></p>
