--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -12,7 +12,9 @@
         <link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.min.css">
         {% block css %}{% endblock %}
     </head>
-    <body> 
+    <body>
+    <div id="background">
+    </div>
         <div id="page">
             <div class="ui black huge launch right attached button" id="showIndex">
                 <i class="icon list layout"></i><span class="text">FLAME</span>
