--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -12,13 +12,14 @@ body {
     backface-visibility: hidden;  
 }
 
-#page {
+#background {
     background:gray;
     background:-moz-linear-gradient(top left, #192124, #808688, #38312f);
     background:-webkit-linear-gradient(top left, #192124, #808688, #38312f);
     height:100%;
     width:100%;
     position:fixed;
+    z-index:-999;
 }
 
 * {
@@ -148,7 +149,6 @@ a.dock-item2 {
 }
 
 ::-webkit-scrollbar-track {
-  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
   border-radius: 5px;
   height: 8px;
 }
@@ -156,7 +156,6 @@ a.dock-item2 {
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.7);
-  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
