--- a/server/static/css/experiment.css
+++ b/server/static/css/experiment.css
@@ -23,7 +23,7 @@
     padding-top:50px;
 }
 
-#procedure {
+#tabs {
     width:1200px;
     height:555px;
 }
@@ -63,10 +63,8 @@ p{
     position:relative;
     height:30%;
     width:50%;
-    /*border:5px #407279 solid;*/
     margin-left:5px;
     margin-right:5px;
     margin-top:5px;
     margin-bottom:5px;
-    /*background-color:#f5f5f5;*/
 }
