--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -2,14 +2,10 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    /*height: 780px;*/
     height:100%;
     font-family: Arial, '宋体';
-    /*font-size: 14px;*/
-    /*background-image:-webkit-linear-gradient(top left, black, gray, rgb(142, 110, 110));*/
-    /*background-image:-webkit-linear-gradient(top left, #192124, #808688, #38312f);*/
-    /*background-image:-webkit-linear-gradient(top left, #192124, #808688, #192124);*/
     backface-visibility: hidden;  
+    overflow:hidden;
 }
 
 #background {
@@ -40,7 +36,6 @@ a {
 
 .operate{
     width: 100%;
-    /*height: 87%;*/
     height:700px;
     margin: 1% 0 .5% 0;
     background:none;
