--- a/server/static/css/shape.css
+++ b/server/static/css/shape.css
@@ -174,6 +174,10 @@ width:100%;}
     border-right-color:rgba(157, 183, 187, 1) !important;
 }
 
+#information i:hover {
+    color:#00B5AD;
+}
+
 #progress .content {
     background:rgba(0, 0, 0, 0)!important;
     width:100%;
