--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -39,6 +39,7 @@
                     <th></th>
                     <th>RIPS</th>
                 </tr>
+                <!--
                 <tr class="adjust_line">
                     <td>
                         <div class="mid_line"></div>
@@ -68,7 +69,7 @@
                         </div>
                     </td>
                     <td><input type="range" min="0.00" max="1.00" step="0.1"></td>
-                </tr> <!-- end of adjust_line -->
+                </tr>
                 <tr class="adjust_line">
                     <td>
                         <div class="mid_line"></div>
@@ -98,7 +99,7 @@
                         </div>
                     </td>
                     <td><input type="range" min="0.00" max="1.00" step="0.1"></td>
-                </tr> <!-- end of adjust_line -->
+                </tr> 
                 <tr class="adjust_line">
                     <td>
                         <div class="mid_line"></div>
@@ -128,7 +129,8 @@
                         </div>
                     </td>
                     <td><input type="range" min="0.00" max="1.00" step="0.1"></td>
-                </tr> <!-- end of adjust_line -->
+                </tr> 
+                -->
             </table>
         </div> <!-- end of simulation_adjust_main -->
     </div> <!-- end of simulation_adjust -->
@@ -142,17 +144,17 @@
             <div id="static_adjust_box">
                 <h3>Concentration of input</h3>
                 <div id="static_adjust_input" class="input_range">
-                    <span>0.01 unit</span>
+                    <span>0.01 mM</span>
                     <input class="adjust_input" type="range" min="0.01" max="10.01" step="0.5" value="1" name="other_c" />
                     <output for="other_c">1</output>
-                    <span>10 unit</span>
+                    <span>10 mM</span>
                 </div>
             </div> <!-- end of static_adjust_box -->
             <div id="dynamic_adjust_box">
                 <h3>time interval</h3>
                 <div id="dynamic_adjust_input" class="input_range">
                     <span>20 min</span>
-                    <input class="adjust_input" type="range" min="20" max="600" step="20" value="60" name="timeInterval" />
+                    <input class="adjust_input" type="range" min="20" max="580" step="20" value="60" name="timeInterval" />
                     <output for="timeInterval">60 min</output>
                     <span>600 min</span>
                 </div>
