--- a/server/static/css/circuit.css
+++ b/server/static/css/circuit.css
@@ -1,3 +1,14 @@
+/**
+ * @file circuit.css
+ * @description stylesheet of design
+ * @author Xiangyu Liu
+ * @mail liuxiangyu@live.com
+ * @blog liuxiangyu.net
+ * @data Oct 19 2014
+ * @copyright 2014 SYSU-Software. All rights reserved.
+ * 
+ */
+
 body {
     overflow:hidden;
 }
