--- a/server/static/css/help.css
+++ b/server/static/css/help.css
@@ -1,3 +1,14 @@
+/**
+ * @file help.css
+ * @description stylesheet of help
+ * @author Xiangyu Liu
+ * @mail liuxiangyu@live.com
+ * @blog liuxiangyu.net
+ * @data Oct 19 2014
+ * @copyright 2014 SYSU-Software. All rights reserved.
+ * 
+ */
+
 .ui-tabs-vertical { width: 55em; }
 .ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; width: 12em; }
 .ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
