--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -29,7 +29,7 @@
         <div id="simulation_circuit">
             <div class="ui teal inverted menu"></div>
             <div id="simulation_circuit_main">
-                <div id="logic_box"></div>
+                <div class="ui items" id="logic_box"></div>
             </div>
         </div> <!-- end of simulation_circuit -->
 
@@ -37,7 +37,7 @@
             <table>
                 <tr>
                     <th></th>
-                    <th>RIPS</th>
+                    <th><div class="ui red label">RIPS</div></th>
                 </tr>
                 <!--
                 <tr class="adjust_line">
