--- a/server/static/css/simulation.css
+++ b/server/static/css/simulation.css
@@ -128,44 +128,39 @@ body {
 }
 
 #logic_box {
-    width: 45%;
+    width: 320px;
     height: 80%;
     overflow-y: auto;
     margin: auto;
     margin-top: 2%;
+    padding-top:10px;
 }
 
 .logic_item {
-    height: 98%;
-    width: 98%;
-    border: #10cdcc 2px solid;
-    border-radius: 5px;
-    overflow: hidden;
+    min-height:200px!important;
+    height: 200px!important;
+    width: 300px!important;
+    text-align:center;
+    background:rgba(0, 0, 0, 0.5)!important;
 }
 
-.logic_item img {
-    height: 85%;
-    width: 100%;
+.labelbg {
+    background:rgba(157, 183, 187, 1) !important;
 }
 
-.logic_item p {
-    width: 100%;
-    height: 15%;
-    color: rgba(0, 0, 0, 0.65);
-    text-align: center;
-    font-size: 18px;
-    padding: 2%;
-    background-color: rgba(157, 183, 187, 1);
+.logic_item > img {
+    width:120px;
+    height:120px;
 }
 
 #simulation_circuit .ui.teal.inverted.menu>a {
     width: 33%;
-    background-color: rgba(0, 181, 174, 0.7);
+    background:#707070;
 }
 
 
 #simulation_circuit .ui.teal.inverted.menu>a.item.active {
-    background-color: rgb(0, 181, 174);
+    background:#10cdcc;
 }
 
 #simulation_adjust_main {
