--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -59,7 +59,7 @@
                 </div>
             </div> <!-- end of static_adjust_box -->
             <div id="dynamic_adjust_box">
-                <h3>time interval</h3>
+                <h3>Time interval</h3>
                 <div id="dynamic_adjust_input" class="input_range">
                     <span>20 min</span>
                     <input class="adjust_input" type="range" min="20" max="600" step="20" value="60" name="timeInterval" />
