--- a/server/static/css/simulation.css
+++ b/server/static/css/simulation.css
@@ -67,7 +67,7 @@ body {
 }
 
 #Static {
-    width: 90%;
+    width: 1100px;
     top: 12%;
     left: 1%;
     z-index: 2;
@@ -257,7 +257,7 @@ body {
 .static_box {
     float: left;
     width: 450px;
-    margin: 0 3% 0 3%;
+    margin: 0 20px 0 20px;
 }
 
 .search.icon {
@@ -345,10 +345,10 @@ body {
 #static_adjust_box h3,
 #dynamic_adjust_box h3 {
     margin: 10px;
-    text-align: center;
 }
 
 .input_range {
+    margin-top:100px;
     height:  20px;
     position: relative;
 }
