--- a/server/static/css/simulation.css
+++ b/server/static/css/simulation.css
@@ -362,7 +362,6 @@ body {
 
 output {
     position: absolute;
-    opacity: 0.7;
     background-image: -moz-linear-gradient(top, #444444, #999999);
     background-image: -o-linear-gradient(top, #444444, #999999);
     background-image: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#999999));
@@ -370,12 +369,13 @@ output {
     height: 30px;
     text-align: center;
     color: white;
-    border-radius: 10px;
+    border-radius: 2px;
     display:  none;
     bottom: 180%;
     left: 0;
     margin-left: -1%;
     z-index: 99999;
+    background:rgba(0, 0, 0, 0.2);
 }
 
 output:after {
@@ -383,7 +383,7 @@ output:after {
     position: absolute;
     width: 0;
     height: 0;
-    border-top: 10px solid #999999;
+    border-top: 10px solid rgba(0, 0, 0, 0.2);
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     top: 100%;
