--- a/server/templates/experiment.html
+++ b/server/templates/experiment.html
@@ -37,7 +37,7 @@
         to 20 μL with dH2O.Salt conditions for double digestion. Useful enzyme combinations for digesting 
         BioBrick parts with their optimal buffer and what the digestion produces. All five reactions are 
         optimal at 37°C<br /><br /></p>
-        <table id="mytable" class="table table-bordered table-hover" style="" align="center">
+        <table id="mytable" class="ui table table-bordered table-hover" style="" align="center">
             <caption><b>Table 1</b></caption>
             <tr>
                 <th colspan="2"><b>Restriction enzymes</b></th>
