--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -51,7 +51,7 @@
             </div>
             <div id="inputpart">
                 <div class="ui icon input search">
-                    <input type="text" placeholder="Search All">
+                    <input type="text" placeholder="Search All"  id="searchinput">
                     <i class="search icon"></i>
                 </div>
             </div>
@@ -61,6 +61,10 @@
             Output
         </div>
         <div class="content">
+            <div class="ui icon input search">
+                <input type="text" placeholder="Search All"  id="searchoutput">
+                <i class="search icon"></i>
+            </div>
             <div class="ui items" id="outputlist">
             </div>
         </div>
