--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -4,6 +4,13 @@
 <link rel="stylesheet" type="text/css" href="../static/css/circuit.css">
 {%endblock css %}
 {%block content %}
+<div class="ui huge breadcrumb" id="menu">
+    <a class="active section" href="/design">Design</a>
+    <a class="section" href="/shape">Display</a>
+    <a class="section" href="/simulation">Simulation</a>
+    <a class="section" href="/experiment">Experiment</a>
+    <a class="section" href="/help">Help</a>
+</div>
 <div id="circuits">
     <div class="ui teal button" id="upload">
         Complete
@@ -193,7 +200,7 @@
                         </tr> 
                     </thead>
                     <tbody>
-                        <tr><td></td><td></td></tr>
+                    <tr><td></td><td></td></tr>
                     </tbody> 
                 </table>
             </form>
